--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,10 @@
+# jekyll gitignore
+_site
+.sass-cache
+
+# zurb foundation gitignore
 /bower_components/*
 /.sass-cache/*
 *.DS_Store
 /stylesheets/*
+
